--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,58 +13,69 @@ para poder colocar algo por ejemplo una letra personalizada de acuerdo al root s
 
     De esta forma vamos a poder colocar custom propierties, y vamos a tener mejor control de los colores, fuentes, estilos etc.
 */
-:root{
-    --primario:#6935FE;
-    --fondo:#e1e5ee;
+:root {
+    --primario: #6935FE;
+    --fondo: #e1e5ee;
     --fuente-primaria: 'Roboto', sans-serif;
 }
 
-body{
-    font-family: var(--fuente-primaria)!important;
+body {
+    font-family: var(--fuente-primaria) !important;
     background-color: var(--fondo)
 }
 
-.color-fondo{
+/* este es el color del fondo del navbar */
+.color-fondo {
     background-color: var(--primario);
     padding: 15px;
 }
-.navbar-logo{
+
+.navbar-logo {
     width: 12rem !important;
     margin-right: 5rem !important;
 }
-.links-navbar{
+
+/* aquí empiezan links del navbar */
+.links-navbar {
     font-weight: bold;
-    text-shadow:10px 4px 1px rgba(0,0,0,0.1);
+    text-shadow: 10px 4px 1px rgba(0, 0, 0, 0.1);
 }
 
-.links-navbar:hover{
+.links-navbar:hover {
     color: var(--primario);
-    text-shadow:10px 4px 1px rgba(0,0,0,0.1);
+    text-shadow: 10px 4px 1px rgba(0, 0, 0, 0.1);
     /* transition: all 0.75s; */
     cursor: pointer;
-    text-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
     transform: scale(1.5);
     transition: all 0.8s ease;
-
-
-
 }
 
-.btn-registro{
+.btn-registro {
     background-color: var(--fondo);
     padding: 10px 25px;
     border-radius: 30px;
-    color: var(--primario)!important;
+    color: var(--primario) !important;
     font-weight: bold;
-    box-shadow: 4px 3px 1px rgba(0,0,0,0.1);
+    box-shadow: 4px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
-.btn-registro:hover{
+.btn-registro:hover {
     cursor: pointer;
-    box-shadow: 15px 8px 1px rgba(0,0,0,0.1);
+    box-shadow: 15px 8px 1px rgba(0, 0, 0, 0.1);
     transform: scale(1.1);
     transition: all 0.8s ease;
 }
-
-
+.nosotros-effects{
+    backdrop-filter: blur(10px);
+}
+.acerca-bg{
+    background-color: var(--primario)!important;
+    border-radius: 20px;
+    padding: 20px;
+}
+.marco-bg{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
 
